2012-03-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLDocument.m:
	* Source/NSXMLDTD.m:
	* Source/NSXMLNode.m:
	* Source/NSXMLDTDNode.m:
	* Source/NSXMLElement.m:
	Bracket everything in test of HAVE_LIBXML2
	* configure.ac:
	* configure:
	Alter tests for major dependencies (ICU, XML, TLS) so that they all
	abort configuration unless specifically disabled ... we want a
	consistent build with all major features.

2012-03-20  Niels Grewe <niels.grewe@halbordnung.de>
	* Headers/Foundation/NSObjCRuntime.h: Define NS_REQUIRES_NIL_TERMINATION
	macro.

2012-03-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSException.h:
	Try to make error message more helpful when building with incompatible
	exception handling settings.

2012-03-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLDTDNode.m: Correct node type, at least for entity nodes.
	* Source/NSXMLDTD.m: Use predefined entities from libxml2.
	* Source/NSXMLNode.m: Rewrite the ownership transfer to preserve
	names in dictionaries.

2012-03-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLPrivate.h: Remvoe unused ivars.
	* Source/NSXMLDocument.m: Get DTD from node and and validation in
	init methods.
	* Source/NSXMLDTD.m: Implement.
	* Source/NSXMLNode.m: No children for attribute nodes.
	* Tests/base/NSXMLNode/basic.m: Test empty attribute children

2012-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-XMLStringWithOptions:): Protect the
	different format constants with version checks.

2012-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLDocument.m (-XMLDataWithOptions:): Correct convesion
	to NSData. Add some comments.

2012-03-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLPrivate.h: Add comments on owner policy.
	* Source/NSXMLNode.m (-XMLStringWithOptions:): Reimplement to
	allow closer control over output.
	* Source/NSXMLDocument.m (-XMLStringWithOptions:): Remove this method.

2012-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLPrivate.h: